--- a/cinemAppDB_JPA/service.properties
+++ b/cinemAppDB_JPA/service.properties
@@ -1,9 +1,9 @@
-#C:\Users\Home\Documents\NetBeansProjects\CinemaTickets\cinemAppDB_JPA
+#C:\Users\Coordinacion\Documents\NetBeansProjects\CinemaTickets\cinemAppDB_JPA
 # ********************************************************************
 # ***        NO edite este archivo.         ***
 # *** SI CAMBIA SU CONTENIDO PODRÍA CAUSAR DAÑOS EN LOS DATOS. ***
 # ********************************************************************
-#Sun Nov 10 16:26:51 COT 2019
+#Tue Nov 12 18:54:39 COT 2019
 SysschemasIndex2Identifier=225
 SyscolumnsIdentifier=144
 SysconglomeratesIndex1Identifier=49
