package Icons, Label Icons

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,14 @@ dist.jar=${dist.dir}/CinemApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.iText-5.0.5.jar=iText-5.0.5.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.MyLibrary.classpath}
+    ${file.reference.iText-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
